fix: refactoring tests to new events